src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <listViews>
        <fullName>Agreements_for_OE</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8) AND (9 OR 10)</booleanFilter>
        <columns>NAME</columns>
        <columns>Agreement_External_Contract_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>ERP__c</columns>
        <columns>Inco_Term_Description__c</columns>
        <columns>Apttus_CMConfig__PaymentTermId__c</columns>
        <columns>Nokia_Legal_Entity_lookup__c</columns>
        <columns>Nokia_Legal_Entity__c</columns>
        <columns>Lead_BU__c</columns>
        <columns>Tax_Id_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>contains</operation>
            <value>SFR,TELENT</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>SFR Comptabilite Fournisseurs</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>Pan Dacom NETWORKING AG</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>Altice France</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>COMPLETEL SAS</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>IRISE SA</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>equals</operation>
            <value>TELEFONICA UK LTD</value>
        </filters>
        <filters>
            <field>Apttus__Account__c</field>
            <operation>contains</operation>
            <value>ORANGE SLOVENSKO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Apttus__APTS_Agreement__c.General</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Agreements for OE</label>
    </listViews>
    <listViews>
        <fullName>All_Agreements_record_type_blank</fullName>
        <columns>NAME</columns>
        <columns>Apttus__FF_Agreement_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Contract_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Apttus__APTS_Agreement__c.Care_Agreement,Apttus__APTS_Agreement__c.ContractRequest,Apttus__APTS_Agreement__c.General,Apttus__APTS_Agreement__c.Legacy,Apttus__APTS_Agreement__c.NDA,Apttus__APTS_Agreement__c.Frame_Agreement,Apttus__APTS_Agreement__c.SSA,Apttus__APTS_Agreement__c.Transactional_Non_SSA</value>
        </filters>
        <label>All Agreements record type blank 1</label>
    </listViews>
</CustomObject>