src/objects/Apttus__APTS_Agreement__c/fields/CLM_G5_Approval_Level_Overall__c.field-meta.xml
<CustomField>
    <fullName>CLM_G5_Approval_Level_Overall__c</fullName>
    <label>G5 Approval Level Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLM_WtD_Approval_Level__gvs</valueSetName>
    </valueSet>
</CustomField>