src/objects/Apttus__APTS_Agreement__c/fields/Lead_BG__c.field-meta.xml
<CustomField>
    <fullName>Lead_BG__c</fullName>
    <inlineHelpText>For Frame, Use MN + Populate supporting BG&apos;s</inlineHelpText>
    <label>Lead BG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Group_Values__gvs</valueSetName>
    </valueSet>
</CustomField>